# rules_js_node_gyp

./: .gitignore  BUILD  README.md  WORKSPACE  package.json
ui/: BUILD.bazel  index.html  index.ts  tsconfig.json
