load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "nodejs_test")
load("@npmv2//:parcel/package_json.bzl", "bin")
load("@npm//parcel:index.bzl", "parcel")

# UI production build using parcel.
bin.parcel(
    name = "build",
    srcs = [
        "index.html",
        "index.ts",
        "tsconfig.json",
        "//:node_modules",
    ],
    args = [
        "build",
        "$(execpath index.html)",
        "--dist-dir",
        "$(@D)",
    ],
    output_dir = True,
)

parcel(
    name = "oldbuild",
    args = [
        "build",
        "$(execpath index.html)",
        "--dist-dir",
        "$(@D)",
    ],
    data = [
        "index.html",
        "index.ts",
        "tsconfig.json",
        "@npm//:node_modules",
    ],
    output_dir = True,
)
